# sentimental

./: .gitignore  README  README.md  WIKI.md  build_layer.sh  infrastructure.yaml  keywords_config.json  lambdas.yaml  requirements.txt  samconfig.toml.example  stepfunctions.yaml  template.yaml
layers/: requirements.txt
layers/python/: build_layer.ps1  build_layer.sh  requirements.txt
sentiment_getter/: lambda_function.py
sentiment_getter/functions/: athena.py  error_handler.py  job_poller.py  reddit_scraper.py  sentiment_analyzer.py  sentiment_job_creator.py  storage.py
sentiment_getter/functions/job_creator/: __init__.py  chatgpt_provider.py  (+4 more)
sentiment_getter/functions/job_creator/array_splitter/: Cargo.toml  Dockerfile  README  docker-build.sh  integration_test.rs  main.rs  split_result.rs  split_result_test.rs
sentiment_getter/model/: job.py  post.py  sentiment.py
sentiment_getter/models/: job.py  post.py  sentiment.py
sentiment_getter/providers/: chatgpt_provider.py  comprehend_provider.py  provider_factory.py  sentiment_provider.py
sentiment_getter/scripts/: README.md  create_iceberg_table.py  parse_samconfig.py
sentiment_getter/sentiment_service_providers/: chatgpt_provider.py  comprehend_provider.py  sentiment_service_provider.py  service_provider_factory.py
sentiment_getter/source/: reddit.py
sentiment_getter/supabase_scripts/: README.md  sentiment_results.sql
sentiment_getter/tests/: __init__.py  test_chatgpt_provider.py  test_comprehend_provider.py  test_post.py  test_provider_factory.py  test_reddit_scrapper.py  test_steam_scrapper.py
(+16 files in other folders)
