[package]
name = "split_result"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
serde_json = "1.0"

# Use a separate file for tests to avoid duplicate target warnings
[lib]
name = "split_result"
path = "split_result.rs"

# The binary target for Lambda deployment
[[bin]]
name = "bootstrap"
path = "main.rs"

[[test]]
name = "split_result_test"
path = "split_result_test.rs"

[[test]]
name = "integration_test"
path = "integration_test.rs" 